# random-student-streamlit

./: README.md  pyproject.toml
src/app/: main.py
src/app/src/: constants.py  display.py  inputs.py  random.py
