[tool.poetry]
name = "random-student-streamlit"
version = "0.1.0"
description = ""
authors = ["Xavier Lai <xavier.l@cabaia.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.40.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
